[project]
name = "neon-rag"
version = "1.0.0"
description = "一个开源的企业级知识库系统，专为本地部署设计。"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{ name = "杨飞", email = "yangfei86@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "colorlog>=6.10.1",
    "fastapi>=0.121.1",
    "greenlet>=3.2.4",
    "hanlp>=2.1.3",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "minio>=7.2.18",
    "opencc>=1.1.9",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "unstructured[all-docs]>=0.18.18",
    "weaviate-client>=4.17.0",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.38.0",
]
